# cb0t

./: .gitignore  .pylintrc  README.md  REFACTORING.md  az-create.sh  az-publish.sh  code-style.md  function_app.py  pyproject.toml  requirements.txt  run-azure-install.sh  run-delete-azure.sh  run-install-azure.sh
.github/: copilot-instructions.md
.github/workflows/: main_cb0t.yml
assets/: asset.py  asset_pairs.py
cb0t/: asset.py  asset_pairs.py  btceur.py  btcusd.py  engine.py  etheur.py  ethusd.py  kraken_api.py  paxgeur.py  soleur.py  solusd.py
cb0t/html/: balance.html.j2  base.html.j2  base.html.jinja2  env.html.j2  index.html.j2  ticker.html  ticker.html.j2  ticker.html.jinja2
html/: balance.html.j2  base.html.j2  index.html.j2  simulations.html.j2  ticker.html.j2
notebook/: pandas.ipynb  rsi_analysis.ipynb  rsi_calculation.ipynb  rsi_investment_simulation.ipynb
routes/: __init__.py  balance.py  env.py  index.py  simulations.py  ticker.py
services/: cost_basis.py  trading.py
tests/: test_assets.py  test_balance.py  test_btcusd.py  test_cost_basis.py  test_engine.py  test_function_app.py  test_rsi.py  test_simulations.py  test_ticker.py
timers/: __init__.py  accumulate.py
utils/: __init__.py  data_converter.py  html_renderer.py  kraken_client.py
