[project]
name = "cb0t"
version = "0.1.0"
description = ""
authors = [{ name = "r0nny8000", email = "r0nny8000@bea2b.de" }]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions (>=1.23.0,<2.0.0)",
    "python-kraken-sdk (>=3.2.2,<4.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=2.3.1,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.3.5"
notebook = ">=7.4.3,<8.0.0"
