[project]
name = "cb0t"
version = "0.1.0"
description = ""
authors = [{ name = "r0nny8000", email = "r0nny8000@bea2b.de" }]
license = { text = "GPL-3.0-only" }
readme = "README.md"
requires-python = ">=3.12"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.12"
azure-functions = "^1.20.0"
python-kraken-sdk = "^2.2.1"
jinja2 = "^3.1.4"
pandas = "^2.1.4"
plotly = "^6.3.1"
yfinance = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
pytest = "^8.3.5"
notebook = ">=7.4.3,<8.0.0"
